Made pressure sensor read "-" instead of "0.000" when in the dirt/grass
Added original image assets for new textures
# 0.00.56 (63862) Apr 30, 2012
Added screenshot
Removed @Override annotation for interface implementations to facilitate testing under Java 1.5
Pressure tab: Fixed "seam" pattern in the grasses, visible when atmosphere was off
Pressure tab: Fixed cutaway earth graphics when atmosphere is off
Pressure tab: Moved the grass down a little bit because there is a blue "air" gap between the grass and the ground
Pressure tab: added border cement to the pools
Flow tab: updated handle image to be more visible against the brown earth color
Flow tab: Show earth cutaway
Pressure tab: Scene 3: Fixed: block dragging code doesn't have the right scale at full screen
Pressure tab: Made pool background gray and textured like concrete
Water tower tab: Reduce precision in pressure sensor when over the water tower water
Added developer menu items for the dirt color
Pressure tab: added grass for all scenes
Water tower tab: Fixed: units metric/english control should be left justified instead of centered in units box
Water tower tab: Added hose icon
Water Tower tab: added ruler icon
Flow tab: Made font for "dots" checkbox larger
Flow + Water Tower tabs: Fixed: Reset all doesn't reset pause/running state of the clock
Flow + Water Tower tabs: Fixed: Reset all doesn't reset the radio button for slow motion
Pressure tab: Fixed: On the first tab: Reset All doesn't reset the amount of water in the rectangular pool, but does the others.
Flow tab: move the "dots" checkbox vertically up, centering it on the dispenser button
Scene 1: Reworded "1 feet" to "1 foot" and "1 meters" to "1 meter"
Scene 1: Fixed: The grid no longer aligns with the pool
# 0.00.55 (63762) Apr 26, 2012
Scene 1: Improved water height readout formatting
Scene 1: Added input faucet
Scene 2: Trapezoid pool now starts half full
Scene 1: Translated the pool to the left
Scene 1: starts with a half full water basin.