@@ -1,3 +1,4 @@
+Water tower tab: Added a nozzle to the hose icon
 Made pressure sensor read "-" instead of "0.000" when in the dirt/grass
 Added original image assets for new textures
 # 0.00.56 (63862) Apr 30, 2012
